feat: add change user role endpoint for admin
